Done spec for CategoryApiController@store in case validation
