# app/Http/Controllers/Api/CategoriesApiController.php
@@ -169,6 +169,18 @@ class CategoriesApiController
      *              ),
      *          ),
      *      ),
+     *      @OA\Response(
+     *          response=422,
+     *          description="Unprocessable Content",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="The given data was invalid."),
+     *              @OA\Property(property="erorrs", type="object",
+     *              @OA\Property(property="name", type="array",
+     *                  @OA\Items(type="string", example="The name field is required."),
+     *              ),
+     *          ),
+     *      )
+     *  ),
      * )
      **/
     public function store(CategoryRequest $request)
